# nyrna

./: .git-blame-ignore-revs  .gitignore  .gitmodules  ATTRIBUTION.md  BUILDING.md  CHANGELOG.md  COMPILING.MD  PRIVACY_POLICY.md  README.md  VERSION  analysis_options.yaml  com.example.FlutterApp.json  config.go  constants.go  dialog.go  go.mod  go.sum  helpers.go  hotkeylinux.go  hotkeywindows.go  l10n.yaml  notify.go  nyrna.go  pubspec.yaml  pyproject.toml  saveprocess.go  suspend.go  suspendlinux.go  suspendwindows.go  systray.go  todo.md
.devcontainer/: Dockerfile  build-flatpak-in-container.sh  build-in-container.sh  devcontainer.json
.github/: FUNDING.yml  release.yml
docs/: CNAME  Gemfile  _config.yml  index.md
icons/: iconunix.go  iconwin.go  make_icon.bat
integration_test/: app_test.dart
lib/: app.dart  config.dart  globals.dart  main.dart  native_process.dart  nyrna.dart  parse_args.dart  process.dart  theme.dart  window.dart
linux/: CMakeLists.txt  my_application.cc
nyrna/: constant.py  go.mod  hotkey.py  nyrna.go  nyrna.py  nyrna_logger.py  saveprocess.go  suspend.go  suspend.py  suspendlinux.go  suspendwindows.go  systray.go
packaging/: build-linux.sh  nyrna.desktop
scripts/: build-linux-pull-request_test.sh  build_windows_local.ps1  ci_local.ps1  local_ci_check.ps1
snap/: snapcraft.yaml
test/: fake_app_version.dart  fake_versions.dart  helpers.dart  mock_app_version.dart  mock_native_platform.dart  mock_preferences.dart  mock_preferences_cubit.dart  mock_process.dart  mock_settings_cubit.dart  mock_settings_service.dart  nyrna_test.dart  (+3 more)
(+339 files in other folders)
